--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -25,7 +25,7 @@
 
 .headerWord {
   color: #e7d8c9;
-  font-size: 13px;
+  font-size: 16px;
 }
 
 .headerList {
@@ -56,7 +56,7 @@
 
 .headerNumber {
   color: #d81e5b;  /* Your desired color for the numbers. */
-  font-size: 13px;
+  font-size: 16px;
   font-family: Monaco, monospace;
 
 }
@@ -69,7 +69,7 @@
 }
 .introHi{
   color: #d81e5b;  
-  font-size: 14px;
+  font-size: 17px;
   font-family: Monaco, monospace;
 }
 .intro-box {
@@ -82,6 +82,11 @@
   color: #eee4e1;
 }
 .intro-bio{
+  color: #e7d8c9;
+  font-size: 28px;
+}
+.intro-bio2{
+  font-size: 19px;
   color: #220901;
 }
 .sidebar {
@@ -114,7 +119,7 @@
   transition: 0.3s;
 }
 .sidebar ul li a i {
-  font-size: 24px; 
+  font-size: 27px; 
   color: white; 
 }
 
@@ -138,8 +143,8 @@
 }
 
 .about-image {
-  width: 200px;  
-  height: 200px;  
+  width: 250px;  
+  height: 250px;  
   margin-right: 20px; 
   border-radius: 50%; 
   object-fit: cover; /* This will make sure the image covers the whole area without distorting its aspect ratio */
@@ -147,27 +152,30 @@
 }
 .AboutMe{
   color: #e7d8c9;
-  font-size: 25px;
+  font-size: 28px;
   margin-top: 90px;
   margin-bottom: 10px;
 }
 .about-bio{
   color: #220901;
-  font-size: 18px;
+  font-size: 19px;
 }
 .experience-box {
   text-align: left;
   padding-left: 20px;
   width: 60%;           
-  margin-top: 125px;
+  margin-top: 65px;
+}
+.experbox2{
+  margin-top: 60px;
 }
 
 .job {
   padding: 20px;
   margin-bottom: 20px;
   border-radius: 5px;
-  background-color: #fff;
-  box-shadow: 0px 2px 8px rgba(0,0,0,0.1);
+  background-color:  #eee4e1;
+  box-shadow: 0px 2px 8px rgba(119, 112, 112, 0.1);
 }
 
 .job:last-child {
@@ -175,25 +183,104 @@
 }
 
 .job h4 {
-  color: #333;
-  font-size: 18px;
+  color: #220901;
+  font-size: 21px;
   margin-bottom: 10px;
 }
 
 .job-title {
-  color: #666;
+  color: #d81e5b;
   font-style: italic;
 }
 
 .job-date {
-  color: #888;
+  color: #b2967d;
   margin-bottom: 15px;
 }
 
 .job ul {
   list-style-type: disc;
   margin-left: 20px;
-  color: #555;
+  color: #220901;
+}
+/* Work Section Container */
+.work-box {
+  text-align: left;
+  padding: 20px;
+  width: 60%;           
+}
+.workbox2{
+  padding-top: 60px;
 }
 
+/* Each Project Container */
+.project {
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  background-color: #eee4e1;
+  box-shadow: 0px 2px 8px rgba(119, 112, 112, 0.1);
+}
+
+.project:last-child {
+  margin-bottom: 0;
+}
+
+/* Project Titles */
+.project h4 {
+  color: #220901;
+  font-size: 21px;
+  margin-bottom: 10px;
+}
+
+/* Project Dates */
+.project-date {
+  color: #b2967d;
+  margin-bottom: 15px;
+}
+
+/* Bullet points */
+.project ul {
+  list-style-type: disc;
+  margin-left: 20px;
+  color: #220901;
+}
+
+/* Media (images/videos) within each project */
+.project-media {
+  max-width: 100%;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 8px rgba(119, 112, 112, 0.1);
+}
+
+/* Video Container - for YouTube videos */
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* Aspect Ratio 16:9 */
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+/* GitHub Link */
+.project-link {
+  display: block;
+  margin: 10px 0;
+  color: #d81e5b;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.project-link:hover {
+  color: #b01548;
+}
 
